--- a/.github/workflows/St2_Build-iStoreOS-ib.yml
+++ b/.github/workflows/St2_Build-iStoreOS-ib.yml
@@ -250,5 +250,5 @@ jobs:
           tag_name: iStoreOS-24.10-${{ inputs.openwrt_rootfs }}-${{ inputs.network_settings }}
           files: |
             ${{ env.PACKAGED_OUTPUTPATH }}/*.img.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        #env:
+          #GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
