--- a/.github/workflows/St1_Build-Rootfs-release.yml
+++ b/.github/workflows/St1_Build-Rootfs-release.yml
@@ -114,7 +114,7 @@ jobs:
     - name: 🚀 上传到 Release
       uses: softprops/action-gh-release@v2.2.1
       with:
-        tag_name: iStoreOS-24.10-RELEASE-${{ inputs.network_settings }}
+        tag_name: iStoreOS-24.10-RELEASE-${{ inputs.network_settings }}-${{ github.run_id }}-${{ github.run_attempt }}
         body: |
           📌 版本： iStoreOS-24.10.2-RELEASE（imagebuilder构建，稳定版）
           
@@ -131,5 +131,7 @@ jobs:
           🌐 IP： ${{ inputs.network_settings == 'static' && inputs.ipaddr || '单网口-动态获取（从上级路由找寻）；多网口-IP：192.168.100.1' }}
         files: |
           imagebuilder/bin/targets/armsr/armv8/*generic-rootfs.tar.gz
+        draft: false
+        prerelease: false
       #env:
           ##GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
