--- a/.github/workflows/St1_Build-Rootfs-release.yml
+++ b/.github/workflows/St1_Build-Rootfs-release.yml
@@ -114,7 +114,7 @@ jobs:
     - name: 🚀 上传到 Release
       uses: softprops/action-gh-release@v2.2.1
       with:
-        tag_name: iStoreOS-24.10-RELEASE-${{ inputs.network_settings }}-${{ github.run_id }}-${{ github.run_attempt }}
+        tag_name: iStoreOS-24.10-RELEASE-${{ inputs.network_settings }}-$(date +%Y%m%d)-${{ github.run_attempt }}
         body: |
           📌 版本： iStoreOS-24.10.2-RELEASE（imagebuilder构建，稳定版）
           
