--- a/.github/workflows/St2_Build-iStoreOS-ib.yml
+++ b/.github/workflows/St2_Build-iStoreOS-ib.yml
@@ -248,10 +248,8 @@ jobs:
       - name: 🚀 上传到 Release
         uses: softprops/action-gh-release@v2.2.1
         with:
-          tag_name: iStoreOS-24.10-${{ inputs.openwrt_rootfs }}-${{ inputs.network_settings }}-${{ github.run_attempt }}
+          tag_name: iStoreOS-24.10-${{ inputs.openwrt_rootfs }}-${{ inputs.network_settings }}
           files: |
             ${{ env.PACKAGED_OUTPUTPATH }}/*.img.gz
-        draft: false
-        prerelease: false
         #env:
-          #GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
+        #  GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
